--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@
     --background-light: rgba(0, 0, 0, 0.6);
     --background-light-hover: rgba(99, 99, 99, 0.4);
     --background-dark: rgba(0, 0, 0, 0.6);
+    --active: rgba(99, 99, 99, 0.4);
 }
 
 body {
@@ -24,16 +25,32 @@ p {
     color: var(--font-color);
     font-size: 25px;
     display: flex;
-    place-items: center;
     justify-content: center;
 }
 
+.active-header {
+    background-color:var(--active)
+}
+
 .header-text {
-    margin: 20px;
+    margin: 0px;
+    padding-left: 30px;
+    padding-right: 30px;
+    align-items: center;
+    padding-top: 35px;
+    padding-bottom: 36px;
+}
+
+h1 {
+    background-color:var(--active);
+    padding-top: 100px;
+    padding-bottom: 100px;
+    width: 1100px;
+    margin: 0 auto;
 }
 
 #home {
-    
+
 }
 
 #recipe {
@@ -46,12 +63,11 @@ p {
 
 #main {
     text-align: center;
-    margin-top: 24%;
+    margin-top: 17%;
 }
 
 #bred {
     font-size: 170px;
-    margin: 0px;
     color: var(--font-color);
 }
 
