--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,16 @@
     --background-light-hover: rgba(99, 99, 99, 0.4);
     --background-dark: rgba(0, 0, 0, 0.6);
     --active: rgba(99, 99, 99, 0.4);
+    color: var(--font-color);
+    font-family: 'Cinzel Decorative', cursive;
+    font-family: 'Quicksand', sans-serif;
+    font-family: 'Raleway', sans-serif;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Quicksand&family=Raleway&display=swap');
+
+a {
+    color: var(--font-color)
 }
 
 body {
@@ -17,6 +27,11 @@ body {
 
 p {
     margin: 0px;
+}
+
+h2 {
+    margin-top: 30px;
+    margin-bottom: 5px;
 }
 
 .header {
@@ -41,25 +56,46 @@ p {
     padding-bottom: 36px;
 }
 
-h1 {
-    background-color:var(--active);
-    padding-top: 100px;
-    padding-bottom: 100px;
-    width: 1100px;
-    margin: 0 auto;
-}
-
 #main {
     text-align: center;
-    margin-top: 17%;
+    /* margin-top: 0px; */
+}
+
+.page-title {
+    font-size: 150px;
+    background-color:var(--active);
+    padding-top: 80px;
+    padding-bottom: 70px;
+    width: 1100px;
+    margin: 50px auto 0px;
 }
 
 #bred {
     font-size: 170px;
-    color: var(--font-color);
+    margin-top: 300px;
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
+.text-content {
+    background-color: var(--active);
+    width: 1000px;
+    margin: 0 auto;
+    padding: 50px;
+    text-align: left;
+}
 
+#about-content{
+    text-align: center;
 
+}
+
+#last-line {
+    margin-top: 10px;
+}
+
+iframe {
+    margin-top: 50px;
+}
 
 
